--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
 // importing fonts:
-@import "fonts/inter";
+@import 'fonts/inter';
 
 // importing global styles:
-@import "variables";
-@import "site";
-@import "glob";
+@import 'variables';
+@import 'site';
+@import 'glob';
